--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RSS-агрегатор</title>
+  <title>RSS агрегатор</title>
 </head>
 
 <body>
-  <div class="container">
-    <form class="rss-form">
-      <div class="row mt-3">
-        <div class="col">
-          <div class="form-floating">
-            <input type="url" class="form-control" id="rss-input" placeholder="http://example.com">
-            <label for="rss-input">Ссылка RSS</label>
+  <div class="container-fluid bg-dark p-5">
+    <div class="row">
+      <div class="col-mb-10 col-lg-8 mx-auto text-white">
+        <h1 class="display-3">RSS агрегатор</h1>
+        <form class="rss-form text-body">
+          <div class="row">
+            <div class="col">
+              <div class="form-floating">
+                <input type="url" class="form-control" id="rss-input" placeholder="http://example.com">
+                <label for="rss-input">Ссылка RSS</label>
+              </div>
+            </div>
+            <div class="col-auto">
+              <button type="submit" class="btn btn-primary h-100">Добавить</button>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary h-100">Добавить</button>
-        </div>
+        </form>
       </div>
-    </form>
+    </div>
   </div>
 </body>
 
