Create Rss form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <div class="row">
             <div class="col">
               <div class="form-floating">
-                <input type="url" class="form-control" id="rss-input" placeholder="http://example.com">
+                <input type="text" class="form-control" id="rss-input" placeholder="http://example.com"
+                  autocomplete="off" autofocus>
                 <label for="rss-input">Ссылка RSS</label>
               </div>
             </div>
@@ -25,6 +26,8 @@
             </div>
           </div>
         </form>
+        <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+        <p class="feedback m-0 position-absolute small text-success"></p>
       </div>
     </div>
   </div>
