--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="container-fluid bg-dark p-5">
+  <section class="container-fluid bg-dark p-5">
     <div class="row">
       <div class="col-mb-10 col-lg-8 mx-auto text-white">
         <h1 class="display-3">RSS агрегатор</h1>
@@ -30,7 +30,27 @@
         <p class="feedback m-0 position-absolute small text-success"></p>
       </div>
     </div>
-  </div>
+  </section>
+  <section class="container-fluid container-xxl p-5">
+    <div class="row">
+      <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
+        <!-- <div class="card border-0">
+          <div class="card-body">
+            <h2 class="card-title h4">Посты</h2>
+            <ul class="list-group border-0 rounded-0"></ul>
+          </div>
+        </div> -->
+      </div>
+      <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
+        <!-- <div class="card border-0">
+          <div class="card-body">
+            <h2 class="card-title h4">Фиды</h2>
+          </div>
+          <ul class="list-group border-0 rounded-0"></ul>
+        </div> -->
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
