--- a/__fixtures__/index.html
+++ b/__fixtures__/index.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-dark p-5">
+<section class="container-fluid bg-dark p-5">
   <div class="row">
     <div class="col-mb-10 col-lg-8 mx-auto text-white">
       <h1 class="display-3">RSS агрегатор</h1>
@@ -20,4 +20,10 @@
       <p class="feedback m-0 position-absolute small text-success" data-testid="feedback"></p>
     </div>
   </div>
-</div>
+</section>
+<section class="container-fluid container-xxl p-5">
+  <div class="row">
+    <div class="col-md-10 col-lg-8 order-1 mx-auto posts" data-testid="posts"></div>
+    <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds" data-testid="feeds"></div>
+  </div>
+</section>
