--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
           </div>
         </form>
-        <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+        <p class="mt-2 mb-0 text-muted">Пример: https://lorem-rss.herokuapp.com/feed?unit=second&interval=10</p>
         <p class="feedback m-0 position-absolute small text-success"></p>
       </div>
     </div>
