--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <div class="row">
             <div class="col">
               <div class="form-floating">
-                <input type="text" class="form-control" id="rss-input" placeholder="http://example.com"
-                  autocomplete="off" autofocus>
+                <input type="text" class="form-control" id="rss-input" placeholder="http://example.com" name="url"
+                  aria-label="url" autocomplete="off" autofocus>
                 <label for="rss-input">Ссылка RSS</label>
               </div>
             </div>
