Fix network error display

--- a/__fixtures__/index.html
+++ b/__fixtures__/index.html
@@ -1,3 +1,20 @@
+<div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+  data-testid="modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"></h5>
+        <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-break">
+      </div>
+      <div class="modal-footer">
+        <a role="button" class="btn btn-primary full-article" href="#" target="_blank">Читать полностью</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
 <section class="container-fluid bg-dark p-5">
   <div class="row">
     <div class="col-mb-10 col-lg-8 mx-auto text-white">
